fix club widget meta wrap

--- a/src/styles/widgets/_club.scss
+++ b/src/styles/widgets/_club.scss
@@ -58,6 +58,8 @@
           position: relative;
           z-index: 2;
 
+          white-space: normal;
+
           &:hover {
             opacity: .75;
           }
